ajout requirments containt

--- a/.env
+++ b/.env
@@ -7,3 +7,13 @@ SERVER=.appseed.us
 # Used for CDN (in production)
 # No Slash at the end
 ASSETS_ROOT=/static/assets
+SERVER=*
+
+SECRET_KEY=fm!#-z^uu@j-b@#w3_qg-7_a_)*5bbq%_pm^m*wl3b+qihu9dq
+DB_ENGINE=postgresql
+DB_HOST=localhost
+DB_NAME=collection_DB
+DB_NAME_s=synchronize_collection_DB
+DB_USERNAME=postgres
+DB_PASS=postgres2021
+DB_PORT=5432
