--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+APScheduler==3.10.1
 Django==3.2.16
 asgiref==3.4.1
 autopep8==1.6.0
@@ -9,3 +10,12 @@ sqlparse==0.4.2
 toml==0.10.2
 whitenoise==5.3.0
 django-environ==0.8.1
+psycopg2==2.9.5
+psycopg2-binary==2.9.5
+python-dotenv==1.0.0
+pytz-deprecation-shim==0.1.0.post0
+six==1.16.0
+tzdata==2022.7
+tzlocal==4.2
+whitenoise==6.4.0
+
